2003-09-29  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3332460>: nil-deref in khtml::RenderWidget::eventFilter with onchange handler

        Reviewed by darin.

        * kwq/KWQTextField.mm:
        (-[KWQTextField controlTextDidEndEditing:]): call setHasFocus:NO last so we have the widget that lets us get to the bridge and lets us call controlTextDidEndEditing

2003-09-29  David Hyatt  <hyatt@apple.com>

	Fix for 3425053, text past the bottom of a positioned table doesn't repaint.
	3426847 is the same bug.  Both are fixed by ensuring that calcHeight doesn't actually
	do anything other than margin computation and position determination for positioned
	elements.  In reality, for weird edge cases like implying the height via explicit top and
	bottom properties, we'll still be wrong.
	
        Reviewed by darin

        * ChangeLog:
        * khtml/rendering/render_table.cpp:
        (RenderTable::layout):

2003-09-29  David Hyatt  <hyatt@apple.com>

	Make sure that timeouts updateRendering after they execute the scheduled timer
	action.  

	Also fixing 3429455, maxwidth of pres miscomputed when two blank lines occur at
	the end of a pre text run.
	
        Reviewed by darin, mjs (setTimeout fix), darin (pre fix)

        * khtml/ecma/kjs_window.cpp:
        (ScheduledAction::execute):
        * khtml/rendering/render_text.cpp:
        (RenderText::trimmedMinMaxWidth):
        (RenderText::calcMinMaxWidth):

2003-09-29  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3437292 -- Safari uses wrong characters for &and; and &or; entities

        * khtml/html/kentities.gperf: Corrected values for &and; and &or; entities.
        Checked all the rest against a list on the W3C site, and those are the only two that were wrong.
        * khtml/html/kentities.c: Regnenerated.

2003-09-26  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

	Fix for this bug:
